--- a/tower_man/index1.html
+++ b/tower_man/index1.html
@@ -5,15 +5,7 @@
 
 <meta name="viewport" content="width=640, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0"/>
 <title>Tower man</title>
-<script src='../lib/quintus.js'></script>
-<script src='../lib/quintus_sprites.js'></script>
-<script src='../lib/quintus_scenes.js'></script>
-<script src='../lib/quintus_input.js'></script>
-<script src='../lib/quintus_anim.js'></script>
-<script src='../lib/quintus_2d.js'></script>
-<script src='../lib/quintus_touch.js'></script>
-<script src='../lib/quintus_ui.js'></script>
-
+<script src='http://cdn.html5quintus.com/v0.1.6/quintus-all.js'></script>
 <script src='tower_man_1.js'></script>
 <style> 
   body { padding:0px; margin:0px; background-color:black ; } 
