--- a/icon_hack/index1.html
+++ b/icon_hack/index1.html
@@ -14,7 +14,7 @@
 <script src='../lib/quintus_2d.js'></script>
 <script src='../lib/quintus_touch.js'></script>
 <script src='../lib/quintus_ui.js'></script>
-<script src='icon_hack.js'></script>
+<script src='icon_hack_1.js'></script>
 <style> 
   body { padding:0px; margin:0px; background-color:black ; } 
 </style>
